syntax="proto3";


package businessServiceOrder;
option go_package=".;order";

message BusinessServiceOrder {
    int64 businessServiceOrderID = 1;
    int64 clientID = 2;
    int64 businessServiceID = 3;
    string startAt = 4;
    string endAt = 5;
    string createdAt = 6;
    bool prePaid = 7;
    string clientFirstName = 8;
    string clientPhoneNumber = 9;
    string clientPhoneNumberPrefix = 10;
    string clientCommentary = 11;
}

message GetBusinessServiceOrderRequest {
    int64 businessServiceOrderID = 1;
}

message GetBusinessServiceOrderResponse {
    BusinessServiceOrder businessServiceOrder = 1;
}

message GetBusinessServiceOrdersRequest {
    int64 businessServiceID = 1;
}

message GetBusinessServiceOrdersResponse {
    repeated BusinessServiceOrder businessServicesOrders = 1;
}

message CreateBusinessServiceOrderRequest {
    int64 clientID = 1;
    int64 businessServiceID = 2;
    string startAt = 3;
    bool prePaid = 4;
    string clientFirstName = 5;
    string clientPhoneNumber = 6;
    string clientPhoneNumberPrefix = 7;
    string clientCommentary = 8;
}

message CreateBusinessServiceOrderResponse {
    BusinessServiceOrder businessServiceOrder = 1;
}

service BusinessServiceOrders {
    rpc GetBusinessServiceOrder (GetBusinessServiceOrderRequest) returns (GetBusinessServiceOrderResponse) {}
    rpc GetBusinessServiceOrders (GetBusinessServiceOrdersRequest) returns (GetBusinessServiceOrdersResponse) {}

    rpc CreateBusinessServiceOrder (CreateBusinessServiceOrderRequest) returns (CreateBusinessServiceOrderResponse) {}
}
